# OvermindClient

./: README.md  build.gradle  local.properties  upload-keystore
MyApplication/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
MyApplication/app/src/main/: AndroidManifest.xml
MyApplication/app/src/main/assets/: #kernel_vec4.cl#  kernel.cl  kernel_float.cl  kernel_vec4.cl  mac_kernel_vec4.cl  mac_kernel_vec4.cl~  readme.txt  synapse_vec4.cl
MyApplication/app/src/main/cpp/: common.cpp  common.h  hello_world_opencl.cpp  native_method.cpp  native_method.h
MyApplication/app/src/main/java/com/example/myapplication/: Constants.java  DataReceiver.java  MainActivity.java  Simulation.java
MyApplication/app/src/main/java/com/example/overmind/: ConnectionFailedDialogFragment.java  Constants.java  DataReceiver.java  ErrorDialogFragment.java  InitKernelWorkerThread.java  InitializeKernel.java  InputCreator.java  IpChecker.java  KernelInitializer.java  LocalNetwork.java  LookUpServerIP.java  MainActivity.java  MyGLRenderer.java  ServerConnect.java  Simulation.java  SimulationParameters.java  SimulationService.java  SocketInfo.java  Terminal.java  ThreadPool.java  localNetwork.java
MyApplication/app/src/main/res/layout/: activity_main.xml  pre_connection.xml
MyApplication/app/src/main/res/values/: strings.xml
app/: CMakeLists.txt  build.gradle
app/src/main/assets/: kernel.cl  kernel_vec4.cl  kernel_vec4_backup_1.cl  kernel_vec4_backup_2.cl  kernel_vec4_backup_3.cl  readme.txt
app/src/main/java/com/example/overmind/: Constants.java  CountdownToConnectionService.java  ErrorDialogFragment.java  IndexesMatrixBuilder.java  InputCreator.java  KernelInitializer.java  MainActivity.java  Population.java  ServerConnect.java  SimulationService.java  Terminal.java
app/src/main/jni/: common.cpp  common.h  native_method.cpp  native_method.h  populations_methods.cpp  populations_methods.h
app/src/main/jni/include/: common.h  native_method.h  populations_methods.h  shared.h
app/src/main/jni/include/CL/: cl.h
app/src/main/res/layout/: activity_main.xml  establish_connection.xml  pre_connection.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
